anecdoct-rs/tui/src/chatwidget/snapshots/anecdoct_tui__chatwidget__tests__feedback_upload_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • anecdoct-logs.log
    • anecdoct-doctor-report.json
    • auto-review-rollout-thread-1.jsonl
    • anecdoct-connectivity-diagnostics.txt

  Connectivity diagnostics
    - Proxy environment variables are set and may affect connectivity.
      - HTTPS_PROXY = hello

› 1. Yes  Share the current Anecdoct session logs and diagnostics with the team
          for troubleshooting.
  2. No

  Press enter to confirm or esc to go back
